Fix unreadable code blocks in dark mode
Most text should be white, but not code blocks with their light
background.

--- a/assets/main.css
+++ b/assets/main.css
@@ -69,6 +69,10 @@ main > div {
     hr {
         border-top-color: #fff;
     }
+
+    pre {
+        color: #333;
+    }
 }
 
 .constrain-width {
